--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "arielmejiadev/larapex-charts": "^1.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
@@ -16,12 +17,14 @@
         "laravel/jetstream": "^1.6",
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.5",
+        "laravolt/avatar": "^4.0",
         "livewire/livewire": "^2.0",
         "maatwebsite/excel": "^3.1",
         "mckenziearts/laravel-notify": "^2.1",
         "nesbot/carbon": "^2.43",
         "phpoffice/phpspreadsheet": "^1.15",
-        "spatie/laravel-query-builder": "^3.3"
+        "spatie/laravel-query-builder": "^3.3",
+        "tucker-eric/eloquentfilter": "^2.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
