--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:aiOpPKWfJ9Gf9NC1waOwIjIVEzuqPsEks80MpQ7CRkc=
 APP_DEBUG=true
 APP_URL=http://localhost
+ASSET_URL="${APP_URL}"
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
