--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "postcss-import": "^12.0.1",
         "resolve-url-loader": "^3.1.0",
         "tailwindcss": "^1.8.0"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.2"
     }
 }
