--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,14 @@
         "maatwebsite/excel": "^3.1",
         "mckenziearts/laravel-notify": "^2.1",
         "nesbot/carbon": "^2.43",
+        "nexmo/client-core": "^2.7",
         "nexmo/laravel": "^2.4",
+        "nyholm/psr7": "^1.4",
+        "php-http/httplug": "^2.2",
+        "php-http/message-factory": "^1.0",
         "phpoffice/phpspreadsheet": "^1.15",
         "spatie/laravel-query-builder": "^3.3",
+        "symfony/http-client": "^5.2",
         "tucker-eric/eloquentfilter": "^2.4",
         "vonage/client": "^2.4"
     },
