Dates Reservations edit

--- a/.env
+++ b/.env
@@ -49,5 +49,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 NEXMO_KEY=5447e022
 NEXMO_SECRET=v9JHm5ylagQYEJNB
-NEXMO_NUMBER=0600699994
+NEXMO_NUMBER=381600699994
 NEXMO_HTTP_CLIENT="Symfony\\Component\\HttpClient\\HttplugClient"
