--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "maatwebsite/excel": "^3.1",
         "mckenziearts/laravel-notify": "^2.1",
         "nesbot/carbon": "^2.43",
+        "nexmo/client": "^2.4",
         "nexmo/client-core": "^2.7",
         "nexmo/laravel": "^2.4",
         "nyholm/psr7": "^1.4",
